# apks

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/sharknade/apks/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  demo.cpp
app/src/main/java/com/sharknade/apks/: MainActivity.kt
app/src/main/java/com/sharknade/apks/hook/: Shark.kt
app/src/main/java/com/sharknade/apks/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/sharknade/apks/: ExampleUnitTest.kt
cpp/: java.cpp  java.h
gradle/wrapper/: gradle-wrapper.properties
native/: build.gradle.kts
native/src/androidTest/java/com/sharknade/anative/: ExampleInstrumentedTest.kt
native/src/test/java/com/sharknade/anative/: ExampleUnitTest.kt
native_lib/: build.gradle.kts
native_lib/src/androidTest/java/com/sharknade/native_lib/: ExampleInstrumentedTest.kt
native_lib/src/main/cpp/: CMakeLists.txt  art_method.h  findsym.cpp  findsym.h  ida.h  java_hook.cpp  java_hook.h  main.c  main.cpp  native_add.cpp  native_add.h  native_lib.cpp
native_lib/src/main/java/com/sharknade/native_lib/: NativeLib.kt
native_lib/src/test/java/com/sharknade/native_lib/: ExampleUnitTest.kt
so/: art_analyzer  art_method_layout_test  libnative.asm  ndk.path
